# hidemyhtml

./: README.md  main.py  pyproject.toml
hidemyhtml/: hidemyhtml.py
hidemyhtml/template/example/: html_decode.js  index.html  js_decode.js  styles.css
